Recreate notebook loading custom tree model into SHAP

--- a/notebooks/TestingComparison_TreeModelsScratch.ipynb
+++ b/notebooks/TestingComparison_TreeModelsScratch.ipynb
@@ -1448,7 +1448,7 @@
    "outputs": [],
    "source": [
     "# Train DecisionTree from scratch\n",
-    "clf_tree = DecisionTree(max_depth=2, treetype=\"classification\", HS_lambda=10, HShrinkage=False, random_state=42)\n",
+    "clf_tree = DecisionTree(max_depth=2, treetype=\"classification\", HShrinkage=False, random_state=42)\n",
     "clf_tree.fit(X_train, y_train)"
    ]
   },
@@ -2068,7 +2068,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "1cd10b75",
+   "id": "49002184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "43adc2e2",
+   "id": "24976841",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "3d5b4a12",
+   "id": "a8fbf63d",
    "metadata": {},
    "outputs": [
     {
@@ -2810,7 +2810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c730324f",
+   "id": "ae5f2fb8",
    "metadata": {},
    "source": [
     "### `k` parameter for finite sample correction"
@@ -2819,7 +2819,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "af3b8619",
+   "id": "dac0470f",
    "metadata": {},
    "outputs": [
     {
@@ -2848,7 +2848,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "7ad83ce6",
+   "id": "3c324f15",
    "metadata": {},
    "outputs": [
     {
@@ -2868,7 +2868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f21e262",
+   "id": "8472f0b7",
    "metadata": {},
    "source": [
     "if the k parameter is too high the tree will have no splits == global mean will be predicted"
@@ -2877,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "6e51b631",
+   "id": "90da7054",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f3ac0d7",
+   "id": "6d2cf29a",
    "metadata": {},
    "source": [
     "### Other parameters to limit growth of tree"
@@ -2912,7 +2912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7d43a77",
+   "id": "ec46dc5a",
    "metadata": {},
    "source": [
     "`min_samples_split` "
@@ -2921,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "b7f4a9cd",
+   "id": "cc2c64a4",
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +2950,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "a142f964",
+   "id": "5024dcc4",
    "metadata": {},
    "outputs": [
     {
@@ -2972,7 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "a9359a46",
+   "id": "0e9ddfad",
    "metadata": {},
    "outputs": [
     {
@@ -2993,7 +2993,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "5ed20d01",
+   "id": "344bf86c",
    "metadata": {
     "scrolled": true
    },
@@ -3021,7 +3021,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "4781f736",
+   "id": "aaa8d6d2",
    "metadata": {},
    "outputs": [
     {
@@ -3051,7 +3051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292d212b",
+   "id": "ab363149",
    "metadata": {},
    "source": [
     "`min_samples_split` seems to work perfectly fine"
@@ -3060,7 +3060,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "489fbddd",
+   "id": "8556dd63",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "e9e65be2",
+   "id": "5e8e73c7",
    "metadata": {},
    "outputs": [
     {
@@ -3110,7 +3110,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "768994ac",
+   "id": "8b61a2a8",
    "metadata": {},
    "outputs": [
     {
@@ -3136,7 +3136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a95a417",
+   "id": "fccce5d0",
    "metadata": {},
    "source": [
     "`min_samples_leaf` also works "
@@ -3145,7 +3145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40f7347",
+   "id": "d4c008c5",
    "metadata": {},
    "outputs": [],
    "source": []
