--- a/notebooks/SHAP.ipynb
+++ b/notebooks/SHAP.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fb15ff",
+   "id": "41d5422d",
    "metadata": {},
    "source": [
     "## Classification"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70766938",
+   "id": "2b1aa409",
    "metadata": {},
    "source": [
     "### Load data"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f6daaf",
+   "id": "c76e0960",
    "metadata": {},
    "source": [
     "### Fit random forest model and create explainer"
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "21322d0c",
+   "id": "1e141308",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "694ac786",
+   "id": "3d90414a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d0de0b74",
+   "id": "d9eccfea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa6555b7",
+   "id": "e209b97c",
    "metadata": {},
    "source": [
     "### Global feature importance"
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5ba095",
+   "id": "6d009732",
    "metadata": {},
    "source": [
     "### Local feature importance"
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695daf78",
+   "id": "ebe7ce31",
    "metadata": {},
    "source": [
     "### Assess shap values array with regards to tree model"
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "741b235c",
+   "id": "0c1ac233",
    "metadata": {},
    "source": [
     "- Dimension of shap values array (n_rows: n_observation, n_colums: n_features of X dataset) \n",
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863fb10d",
+   "id": "e776a73a",
    "metadata": {},
    "source": [
     "### Smooth SHAP"
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39561fb",
+   "id": "bc125122",
    "metadata": {},
    "source": [
     "#### Smooth SHAP using inbag and oob data"
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c945f801",
+   "id": "8f5b6597",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c68699f4",
+   "id": "68562760",
    "metadata": {
     "scrolled": true
    },
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "089372ea",
+   "id": "b65bd827",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 349,
-   "id": "54f76d05",
+   "id": "a8629d17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0142a0f5",
+   "id": "573f17fe",
    "metadata": {},
    "source": [
     "- Do I need to build a separate model/forest (for each feature) which only contains the trees which did predict on that oob_sample?"
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ebe2c2",
+   "id": "70e4a581",
    "metadata": {},
    "source": [
     "#### Smooth SHAP using train and test data"
@@ -654,7 +654,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e4c485f0",
+   "id": "66c600c4",
    "metadata": {},
    "source": [
     "For clarifying the smooth shap idea we first follow the idea presented by Markus to use a simplified approach by abandoning the inbag/oob approach and use separate train/test data instead\n",
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "15e10f62",
+   "id": "68187b7d",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "fa09e454",
+   "id": "6d05b04c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "40760f51",
+   "id": "5f5c485d",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "28f28ced",
+   "id": "fe330c00",
    "metadata": {},
    "source": [
     "Now we will fit a linear model for each feature\n",
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "5765535f",
+   "id": "dd74346c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "5c6d1172",
+   "id": "c6599013",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb425ea",
+   "id": "5c1775ce",
    "metadata": {},
    "source": [
     "Smooth SHAP score for feature 4 seems rather small. This might indicate that this feature is uninformative."
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8457ab5",
+   "id": "47484986",
    "metadata": {},
    "source": [
     "### Test whether mean of shap scores from individual trees == shap scores of forest "
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "cac1f50b",
+   "id": "fba9567e",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "8a0daeda",
+   "id": "dd30e1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "297f1d87",
+   "id": "4592eee8",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "aef73220",
+   "id": "4a68748a",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a6f195",
+   "id": "42be1066",
    "metadata": {},
    "source": [
     "The mean shap scores are equal to the forest shap score"
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29295e5d",
+   "id": "d2427a8f",
    "metadata": {},
    "source": [
     "Lets see how we can do it in numpy"
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "c9bf7163",
+   "id": "ff0f7d02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "3d84c4e0",
+   "id": "a8cf68e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "46af75bb",
+   "id": "b8bd4395",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "594ebc1f",
+   "id": "d9306a70",
    "metadata": {},
    "source": [
     "#### Test class functionality to compute SHAP oob"
@@ -982,8 +982,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "id": "fc3b08df",
+   "execution_count": 350,
+   "id": "b0c67642",
    "metadata": {},
    "outputs": [
     {
@@ -1013,8 +1013,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
-   "id": "7aaa2084",
+   "execution_count": 351,
+   "id": "d4e91e6f",
    "metadata": {},
    "outputs": [
     {
@@ -1023,19 +1023,19 @@
        "array([ 0.26774273,  0.04137934,  0.09637725,  0.01056344, -0.03144736])"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf_forest_.oob_SHAP_scores[0]"
+    "clf_forest_.oob_SHAP_values[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
-   "id": "8694fd51",
+   "execution_count": 352,
+   "id": "f31e2f54",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "[0]"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,8 +1056,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
-   "id": "e76fd82d",
+   "execution_count": 353,
+   "id": "c978ce2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,17 +1078,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
-   "id": "045381e6",
+   "execution_count": 354,
+   "id": "d2dfca01",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert shap_tree1[0].all()==clf_forest_.oob_SHAP_scores[0].all()"
+    "assert shap_tree1[0].all()==clf_forest_.oob_SHAP_values[0].all()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb8eac31",
+   "id": "78c8912d",
    "metadata": {},
    "source": [
     "This is correct :) "
@@ -1096,8 +1096,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
-   "id": "2782efeb",
+   "execution_count": 355,
+   "id": "3412e4bb",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,8 +1118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
-   "id": "1fee0eff",
+   "execution_count": 356,
+   "id": "bb9424a1",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "array([0.14190511, 0.07668571, 0.09054178, 0.02852567, 0.03377029])"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,8 +1139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
-   "id": "5453d67b",
+   "execution_count": 357,
+   "id": "9ef2a982",
    "metadata": {},
    "outputs": [
     {
@@ -1149,18 +1149,18 @@
        "array([0.14190511, 0.07668571, 0.09054178, 0.02852567, 0.03377029])"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf_forest_.oob_SHAP_scores[2]"
+    "clf_forest_.oob_SHAP_values[2]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "43555862",
+   "id": "cc8c63bb",
    "metadata": {},
    "source": [
     "This also looks correct :) "
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecf80696",
+   "id": "e31a9692",
    "metadata": {},
    "source": [
     "Lets calculate smooth shap"
@@ -1176,8 +1176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
-   "id": "9cbe1a73",
+   "execution_count": 358,
+   "id": "9bb9dd93",
    "metadata": {},
    "outputs": [
     {
@@ -1193,19 +1193,19 @@
        "array([ 0.05659424, -0.01159237, -0.05639348,  0.00255821, -0.01173119])"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "smooth_shap(shap_forest, clf_forest_.oob_SHAP_scores)"
+    "smooth_shap(shap_forest, clf_forest_.oob_SHAP_values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c844f1ad",
+   "id": "a87ca82e",
    "metadata": {},
    "outputs": [],
    "source": []
