Propagate new node values from parent if there is no sample in that note

--- a/notebooks/Reestimate_node_values.ipynb
+++ b/notebooks/Reestimate_node_values.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 4,
    "id": "3a2bfc90",
    "metadata": {},
    "outputs": [],
@@ -78,20 +78,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 25,
    "id": "f65e8904",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_tree = DecisionTree(max_depth=2, treetype=\"regression\", random_state=42)\n",
+    "reg_tree = DecisionTree(max_depth=4, treetype=\"regression\", random_state=42)\n",
     "reg_tree.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ebf0fe",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Code for development of function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 321,
    "id": "627bdc9a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -118,7 +130,9 @@
    "cell_type": "code",
    "execution_count": 322,
    "id": "0165ee3a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "traversed_nodes = reg_tree.explain_decision_path(X_train)[:,0].copy()"
@@ -128,7 +142,9 @@
    "cell_type": "code",
    "execution_count": 323,
    "id": "ce071236",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_vals_array = np.full((reg_tree.n_nodes, X_train.shape[0]), np.nan)"
@@ -138,7 +154,9 @@
    "cell_type": "code",
    "execution_count": 324,
    "id": "83328e0d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for i, (idxs, y) in enumerate(zip(traversed_nodes, y_train.values)):\n",
@@ -149,7 +167,9 @@
    "cell_type": "code",
    "execution_count": 325,
    "id": "6cde92e9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -176,7 +196,9 @@
    "cell_type": "code",
    "execution_count": 326,
    "id": "aa27e418",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -198,7 +220,9 @@
    "cell_type": "code",
    "execution_count": 327,
    "id": "29861506",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -221,7 +245,9 @@
    "cell_type": "code",
    "execution_count": 328,
    "id": "8070a745",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#Check if node values train are equal to newly calculated node values (should be the case since we are only passing training data)\n",
@@ -231,7 +257,9 @@
   {
    "cell_type": "markdown",
    "id": "2411865a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Lets calculate the node values based on the test set"
    ]
@@ -240,7 +268,9 @@
    "cell_type": "code",
    "execution_count": 329,
    "id": "32edc818",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "traversed_nodes_test = reg_tree.explain_decision_path(X_test)[:,0].copy()"
@@ -250,7 +280,9 @@
    "cell_type": "code",
    "execution_count": 330,
    "id": "02fd713d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_vals_array_test = np.full((reg_tree.n_nodes, X_test.shape[0]), np.nan)"
@@ -260,7 +292,9 @@
    "cell_type": "code",
    "execution_count": 331,
    "id": "d8d3b08b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for i, (idxs, y) in enumerate(zip(traversed_nodes_test, y_test.values)):\n",
@@ -271,7 +305,9 @@
    "cell_type": "code",
    "execution_count": 332,
    "id": "831dcd37",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -293,7 +329,9 @@
    "cell_type": "code",
    "execution_count": 333,
    "id": "58298591",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -317,7 +355,9 @@
    "cell_type": "code",
    "execution_count": 334,
    "id": "535b0585",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "orig_node_vals = np.round([node.value for node in reg_tree.node_list],8)"
@@ -327,7 +367,9 @@
    "cell_type": "code",
    "execution_count": 335,
    "id": "63d18ebd",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -350,7 +392,9 @@
    "cell_type": "code",
    "execution_count": 336,
    "id": "56032c59",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "n_samples = np.count_nonzero(~np.isnan(y_vals_array_test), axis=1)"
@@ -360,7 +404,9 @@
    "cell_type": "code",
    "execution_count": 337,
    "id": "7df0e840",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#store regression results in dict \n",
@@ -379,7 +425,9 @@
    "cell_type": "code",
    "execution_count": 338,
    "id": "b1791f53",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -412,34 +460,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
-   "id": "1bc574db",
+   "execution_count": 103,
+   "id": "b3b1f614",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_vals_train, result = reg_tree._reestimate_node_values(X_train, y_train)"
+    "node_vals, result, nan_rows = reg_tree._reestimate_node_values(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
-   "id": "5c6eea71",
+   "execution_count": 104,
+   "id": "711f347f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([153.73654391, 118.0430622 , 100.55921053, 164.66666667,\n",
-       "       205.54166667, 191.10169492, 271.07692308])"
+       "array([], dtype=int64)"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "node_vals_train"
+    "nan_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "55df6268",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'samples': 353, 'value': 153.73654390934846},\n",
+       " 1: {'samples': 209, 'value': 118.04306220095694},\n",
+       " 2: {'samples': 152, 'value': 100.5592105263158},\n",
+       " 3: {'samples': 57, 'value': 164.66666666666666},\n",
+       " 4: {'samples': 144, 'value': 205.54166666666666},\n",
+       " 5: {'samples': 118, 'value': 191.10169491525423},\n",
+       " 6: {'samples': 26, 'value': 271.0769230769231}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   },
   {
@@ -590,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 106,
    "id": "fc73c2ee",
    "metadata": {},
    "outputs": [],
@@ -604,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 107,
    "id": "14b97ca0",
    "metadata": {},
    "outputs": [],
@@ -614,10 +688,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44acfdea",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Code for development of function "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 265,
    "id": "acf4161c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -638,7 +724,9 @@
    "cell_type": "code",
    "execution_count": 266,
    "id": "4a7262df",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "traversed_nodes = clf_tree.explain_decision_path(X_train)[:,0].copy()"
@@ -648,7 +736,9 @@
    "cell_type": "code",
    "execution_count": 267,
    "id": "4d5d1bb5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_vals_array = np.full((clf_tree.n_nodes, X_train.shape[0]), np.nan)"
@@ -658,7 +748,9 @@
    "cell_type": "code",
    "execution_count": 268,
    "id": "f8e91bc6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for i, (idxs, y) in enumerate(zip(traversed_nodes, y_train.values)):\n",
@@ -669,7 +761,9 @@
    "cell_type": "code",
    "execution_count": 269,
    "id": "0cf8d71d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -696,7 +790,9 @@
    "cell_type": "code",
    "execution_count": 270,
    "id": "4d549e75",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#store classification results in dict \n",
@@ -724,7 +820,9 @@
    "cell_type": "code",
    "execution_count": 271,
    "id": "ca6a1dd7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -772,7 +870,9 @@
    "cell_type": "code",
    "execution_count": 272,
    "id": "d751067c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -794,7 +894,9 @@
    "cell_type": "code",
    "execution_count": 273,
    "id": "48ec04f9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -817,7 +919,9 @@
    "cell_type": "code",
    "execution_count": 274,
    "id": "b569becb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -845,7 +949,9 @@
    "cell_type": "code",
    "execution_count": 286,
    "id": "5ee255e0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#Check if node prob distribution are equal to newly calculated node values (should be the case since we are only passing training data)\n",
@@ -855,7 +961,9 @@
   {
    "cell_type": "markdown",
    "id": "7b9fd9b6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Lets calculate the node values based on the test set"
    ]
@@ -864,7 +972,9 @@
    "cell_type": "code",
    "execution_count": 293,
    "id": "300e2f7c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "traversed_nodes_test = clf_tree.explain_decision_path(X_test)[:,0].copy()"
@@ -874,7 +984,9 @@
    "cell_type": "code",
    "execution_count": 294,
    "id": "54da51e6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_vals_array_test = np.full((clf_tree.n_nodes, X_test.shape[0]), np.nan)"
@@ -884,7 +996,9 @@
    "cell_type": "code",
    "execution_count": 295,
    "id": "ba17eb4e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for i, (idxs, y) in enumerate(zip(traversed_nodes_test, y_test.values)):\n",
@@ -895,7 +1009,9 @@
    "cell_type": "code",
    "execution_count": 296,
    "id": "304c3750",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -917,7 +1033,9 @@
    "cell_type": "code",
    "execution_count": 297,
    "id": "2fd84772",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -941,7 +1059,9 @@
    "cell_type": "code",
    "execution_count": 299,
    "id": "a49ea442",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# probabilities for class 1\n",
@@ -952,7 +1072,9 @@
    "cell_type": "code",
    "execution_count": 300,
    "id": "688e09c4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -981,20 +1103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 109,
    "id": "3b29ec0a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\"is not\" with a literal. Did you mean \"!=\"?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "node_probs_train, result = clf_tree._reestimate_node_values(X_train, y_train)"
+    "node_probs_train, result, nan_rows = clf_tree._reestimate_node_values(X_train, y_train)"
    ]
   },
   {
