Propagate new node values from parent if there is no sample in that note

--- a/notebooks/Reestimate_node_values.ipynb
+++ b/notebooks/Reestimate_node_values.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "id": "3a2bfc90",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 114,
    "id": "f65e8904",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ebf0fe",
+   "id": "16de5ded",
    "metadata": {
     "heading_collapsed": true
    },
@@ -460,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "b3b1f614",
+   "execution_count": 115,
+   "id": "c98a9ae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,8 +470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "711f347f",
+   "execution_count": 116,
+   "id": "759315e6",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "array([], dtype=int64)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,8 +491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "55df6268",
+   "execution_count": 117,
+   "id": "b5fb8c48",
    "metadata": {},
    "outputs": [
     {
@@ -501,13 +501,37 @@
        "{0: {'samples': 353, 'value': 153.73654390934846},\n",
        " 1: {'samples': 209, 'value': 118.04306220095694},\n",
        " 2: {'samples': 152, 'value': 100.5592105263158},\n",
-       " 3: {'samples': 57, 'value': 164.66666666666666},\n",
-       " 4: {'samples': 144, 'value': 205.54166666666666},\n",
-       " 5: {'samples': 118, 'value': 191.10169491525423},\n",
-       " 6: {'samples': 26, 'value': 271.0769230769231}}"
+       " 3: {'samples': 49, 'value': 80.87755102040816},\n",
+       " 4: {'samples': 28, 'value': 94.75},\n",
+       " 5: {'samples': 21, 'value': 62.38095238095238},\n",
+       " 6: {'samples': 103, 'value': 109.92233009708738},\n",
+       " 7: {'samples': 64, 'value': 121.859375},\n",
+       " 8: {'samples': 39, 'value': 90.33333333333333},\n",
+       " 9: {'samples': 57, 'value': 164.66666666666666},\n",
+       " 10: {'samples': 54, 'value': 159.57407407407408},\n",
+       " 11: {'samples': 21, 'value': 134.8095238095238},\n",
+       " 12: {'samples': 33, 'value': 175.33333333333334},\n",
+       " 13: {'samples': 3, 'value': 256.3333333333333},\n",
+       " 14: {'samples': 1, 'value': 292.0},\n",
+       " 15: {'samples': 2, 'value': 238.5},\n",
+       " 16: {'samples': 144, 'value': 205.54166666666666},\n",
+       " 17: {'samples': 118, 'value': 191.10169491525423},\n",
+       " 18: {'samples': 85, 'value': 175.8},\n",
+       " 19: {'samples': 10, 'value': 123.5},\n",
+       " 20: {'samples': 75, 'value': 182.77333333333334},\n",
+       " 21: {'samples': 33, 'value': 230.5151515151515},\n",
+       " 22: {'samples': 3, 'value': 123.66666666666667},\n",
+       " 23: {'samples': 30, 'value': 241.2},\n",
+       " 24: {'samples': 26, 'value': 271.0769230769231},\n",
+       " 25: {'samples': 18, 'value': 291.22222222222223},\n",
+       " 26: {'samples': 11, 'value': 278.1818181818182},\n",
+       " 27: {'samples': 7, 'value': 311.7142857142857},\n",
+       " 28: {'samples': 8, 'value': 225.75},\n",
+       " 29: {'samples': 2, 'value': 292.5},\n",
+       " 30: {'samples': 6, 'value': 203.5}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 118,
    "id": "acd46787",
    "metadata": {},
    "outputs": [],
@@ -528,17 +552,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 119,
    "id": "5ced4a25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,28 +581,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 121,
    "id": "b0559b44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_vals_test, result_test = reg_tree._reestimate_node_values(X_test, y_test)"
+    "node_vals_test, result_test, nan_rows = reg_tree._reestimate_node_values(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 122,
    "id": "467708bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([145.7752809 , 123.07142857,  98.97222222, 166.45      ,\n",
-       "       184.3030303 , 179.4137931 , 219.75      ])"
+       "array([145.7752809 , 123.07142857,  98.97222222,  89.125     ,\n",
+       "        66.33333333,  94.38461538, 106.85      , 122.125     ,\n",
+       "        96.66666667, 166.45      , 166.70588235, 147.        ,\n",
+       "       184.22222222, 165.        , 162.        , 171.        ,\n",
+       "       184.3030303 , 179.4137931 , 163.45833333, 110.8       ,\n",
+       "       177.31578947, 256.        , 256.        , 256.        ,\n",
+       "       219.75      , 219.75      , 219.75      , 219.75      ,\n",
+       "       219.75      , 140.        , 246.33333333])"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,18 +619,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 123,
    "id": "fe86e867",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([153.73654391, 118.0430622 , 100.55921053, 164.66666667,\n",
-       "       205.54166667, 191.10169492, 271.07692308])"
+       "array([153.73654391, 118.0430622 , 100.55921053,  80.87755102,\n",
+       "        94.75      ,  62.38095238, 109.9223301 , 121.859375  ,\n",
+       "        90.33333333, 164.66666667, 159.57407407, 134.80952381,\n",
+       "       175.33333333, 256.33333333, 292.        , 238.5       ,\n",
+       "       205.54166667, 191.10169492, 175.8       , 123.5       ,\n",
+       "       182.77333333, 230.51515152, 123.66666667, 241.2       ,\n",
+       "       271.07692308, 291.22222222, 278.18181818, 311.71428571,\n",
+       "       225.75      , 292.5       , 203.5       ])"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 124,
    "id": "7b587684",
    "metadata": {},
    "outputs": [
@@ -621,7 +657,7 @@
        "False"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,18 +669,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 125,
    "id": "32691b2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 7.96126301, -5.02836637,  1.5869883 , -1.78333333, 21.23863636,\n",
-       "       11.68790181, 51.32692308])"
+       "array([   7.96126301,   -5.02836637,    1.5869883 ,   -8.24744898,\n",
+       "         28.41666667,  -32.003663  ,    3.0723301 ,   -0.265625  ,\n",
+       "         -6.33333333,   -1.78333333,   -7.13180828,  -12.19047619,\n",
+       "         -8.88888889,   91.33333333,  130.        ,   67.5       ,\n",
+       "         21.23863636,   11.68790181,   12.34166667,   12.7       ,\n",
+       "          5.45754386,  -25.48484848, -132.33333333,  -14.8       ,\n",
+       "         51.32692308,   71.47222222,   58.43181818,   91.96428571,\n",
+       "          6.        ,  152.5       ,  -42.83333333])"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,6 +694,34 @@
    "source": [
     "# show difference\n",
     "orig_node_vals-node_vals_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "153cd28d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.05461326, 0.9591427 , 1.01603468, 0.907462  , 1.42839196,\n",
+       "       0.66092289, 1.02875367, 0.99782497, 0.93448276, 0.98928607,\n",
+       "       0.95721922, 0.91707159, 0.9517491 , 1.55353535, 1.80246914,\n",
+       "       1.39473684, 1.11523759, 1.06514495, 1.07550344, 1.11462094,\n",
+       "       1.03077867, 0.90044981, 0.48307292, 0.9421875 , 1.23356962,\n",
+       "       1.32524333, 1.26590133, 1.41849504, 1.02730375, 2.08928571,\n",
+       "       0.82611637])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change in pct between orig and node val new\n",
+    "np.divide(orig_node_vals,node_vals_test)"
    ]
   },
   {
@@ -689,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44acfdea",
+   "id": "5b3bdebd",
    "metadata": {
     "heading_collapsed": true
    },
