--- a/notebooks/Reestimate_node_values.ipynb
+++ b/notebooks/Reestimate_node_values.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "6ae46a97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "8bfef773",
    "metadata": {},
    "outputs": [],
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "2dd33cfa",
    "metadata": {},
    "outputs": [],
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 58,
    "id": "3a2bfc90",
    "metadata": {},
    "outputs": [],
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "id": "f65e8904",
    "metadata": {},
    "outputs": [],
@@ -460,17 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "c98a9ae2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_vals, result, nan_rows = reg_tree._reestimate_node_values(X_train,y_train)"
+    "node_vals_train, result, nan_rows = reg_tree._reestimate_node_values(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "759315e6",
    "metadata": {},
    "outputs": [
@@ -480,18 +489,19 @@
        "array([], dtype=int64)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# to keep track of propagated mean\n",
     "nan_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "id": "b5fb8c48",
    "metadata": {},
    "outputs": [
@@ -531,18 +541,48 @@
        " 30: {'samples': 6, 'value': 203.5}}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# for easy readability\n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
+   "id": "3fc4c91a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([153.73654391, 118.0430622 , 100.55921053,  80.87755102,\n",
+       "        94.75      ,  62.38095238, 109.9223301 , 121.859375  ,\n",
+       "        90.33333333, 164.66666667, 159.57407407, 134.80952381,\n",
+       "       175.33333333, 256.33333333, 292.        , 238.5       ,\n",
+       "       205.54166667, 191.10169492, 175.8       , 123.5       ,\n",
+       "       182.77333333, 230.51515152, 123.66666667, 241.2       ,\n",
+       "       271.07692308, 291.22222222, 278.18181818, 311.71428571,\n",
+       "       225.75      , 292.5       , 203.5       ])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# array of \"new\" node values\n",
+    "node_vals_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "acd46787",
    "metadata": {},
    "outputs": [],
@@ -552,22 +592,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "id": "5ced4a25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Lets check if the original node values and the reestimate node values for the training set are identical -> should be\n",
     "np.array_equal(node_vals_train, orig_node_vals)"
    ]
   },
@@ -581,17 +622,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "id": "b0559b44",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lets try it with the test data now\n",
     "node_vals_test, result_test, nan_rows = reg_tree._reestimate_node_values(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
+   "id": "51be0d99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22, 25, 26, 27])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if some nodes could not be \"reached\" with test data\n",
+    "nan_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "467708bd",
    "metadata": {},
    "outputs": [
@@ -608,7 +672,7 @@
        "       219.75      , 140.        , 246.33333333])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "fe86e867",
    "metadata": {},
    "outputs": [
@@ -636,7 +700,7 @@
        "       225.75      , 292.5       , 203.5       ])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 41,
    "id": "7b587684",
    "metadata": {},
    "outputs": [
@@ -657,7 +721,7 @@
        "False"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 42,
    "id": "32691b2d",
    "metadata": {},
    "outputs": [
@@ -686,7 +750,7 @@
        "          6.        ,  152.5       ,  -42.83333333])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,30 +762,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 43,
    "id": "153cd28d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.05461326, 0.9591427 , 1.01603468, 0.907462  , 1.42839196,\n",
-       "       0.66092289, 1.02875367, 0.99782497, 0.93448276, 0.98928607,\n",
-       "       0.95721922, 0.91707159, 0.9517491 , 1.55353535, 1.80246914,\n",
-       "       1.39473684, 1.11523759, 1.06514495, 1.07550344, 1.11462094,\n",
-       "       1.03077867, 0.90044981, 0.48307292, 0.9421875 , 1.23356962,\n",
-       "       1.32524333, 1.26590133, 1.41849504, 1.02730375, 2.08928571,\n",
-       "       0.82611637])"
+       "array([ 0.05461326, -0.0408573 ,  0.01603468, -0.092538  ,  0.42839196,\n",
+       "       -0.33907711,  0.02875367, -0.00217503, -0.06551724, -0.01071393,\n",
+       "       -0.04278078, -0.08292841, -0.0482509 ,  0.55353535,  0.80246914,\n",
+       "        0.39473684,  0.11523759,  0.06514495,  0.07550344,  0.11462094,\n",
+       "        0.03077867, -0.09955019, -0.51692708, -0.0578125 ,  0.23356962,\n",
+       "        0.32524333,  0.26590133,  0.41849504,  0.02730375,  1.08928571,\n",
+       "       -0.17388363])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Change in pct between orig and node val new\n",
-    "np.divide(orig_node_vals,node_vals_test)"
+    "np.divide(orig_node_vals,node_vals_test)-1"
    ]
   },
   {
@@ -734,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 44,
    "id": "fc73c2ee",
    "metadata": {},
    "outputs": [],
@@ -748,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 45,
    "id": "14b97ca0",
    "metadata": {},
    "outputs": [],
@@ -1173,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 46,
    "id": "3b29ec0a",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 47,
    "id": "84f4cf0a",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1263,7 @@
        "       [0.98550725, 0.01449275]])"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 48,
    "id": "2bc56ffb",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 49,
    "id": "bebcfab7",
    "metadata": {},
    "outputs": [],
@@ -1238,17 +1302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 51,
    "id": "f4e302a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_probs_test, result_test = clf_tree._reestimate_node_values(X_test, y_test)"
+    "node_probs_test, result_test, nan_rows = clf_tree._reestimate_node_values(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 52,
    "id": "c7c6327c",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1323,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [317], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# This should not be equal\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m node_probs_test\u001b[38;5;241m.\u001b[39mall() \u001b[38;5;241m==\u001b[39m orig_node_probs\u001b[38;5;241m.\u001b[39mall()\n",
+      "\u001b[0;32m<ipython-input-52-498508b7eb23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# This should not be equal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mnode_probs_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0morig_node_probs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -1271,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 54,
    "id": "a1f6939b",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1351,7 @@
        "       [ 0.0395613 , -0.0395613 ]])"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,11 +1360,19 @@
     "# show difference\n",
     "orig_node_probs-node_probs_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff097e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.6.13 ('venv_master': virtualenv)",
    "language": "python",
    "name": "python3"
   },
@@ -1314,7 +1386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.6.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -1328,6 +1400,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d94c025da75328d2d5dd40c3f3401a47786a54e19e1715d7009c05d4603d2d1a"
+   }
   }
  },
  "nbformat": 4,
