Add own rescaling version of smooth shap

--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "id": "b8017ee1",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "(442, 10)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "45c3e711",
    "metadata": {},
    "outputs": [
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id='iEVIG51KZ9JQNHTGXGM48'>\n",
+       "<div id='iJVQPLDD7EPCGM066ITHC'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -334,15 +334,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.3, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": 0.17691758173901173, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -3.047603155364396, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 26.761964415974603, \"value\": 0.0616962065186885}, \"3\": {\"effect\": 4.355159252148995, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -0.32353193319646456, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 0.4429813637675012, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 5.223910775417433, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 4.398993065365181, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -1.1536849751487623, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -5.1732285626488315, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iEVIG51KZ9JQNHTGXGM48')\n",
+       "    document.getElementById('iJVQPLDD7EPCGM066ITHC')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7f89cd9eaf28>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc4527309b0>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iE6MKNNHK7BZMDQ7W8UUU'>\n",
+       "<div id='iC8341FGPJWLHGSDXL9GT'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -379,15 +379,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 157.48282616900784, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -1.4111140824648403, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -2.6241940307703815, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 12.508771589652234, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -0.5598333658487566, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -0.6011852552375623, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 1.0076351898176146, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 6.014187925163515, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 0.4828330641450232, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -6.632922556059761, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -2.339474481334965, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iE6MKNNHK7BZMDQ7W8UUU')\n",
+       "    document.getElementById('iC8341FGPJWLHGSDXL9GT')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7f89cd991a90>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc452730d68>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iW41JRFEKCF0UT3SXC4U7'>\n",
+       "<div id='iPE1EQYG9AQKXCD3M5NQQ'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -441,15 +441,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.29999999999998, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": 0.17691758173901173, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -3.0476031553643956, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 26.7619644159746, \"value\": 0.0616962065186885}, \"3\": {\"effect\": 4.355159252148995, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -0.32353193319646456, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 0.4429813637675012, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 5.223910775417433, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 4.398993065365181, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -1.1536849751487623, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -5.173228562648832, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iW41JRFEKCF0UT3SXC4U7')\n",
+       "    document.getElementById('iPE1EQYG9AQKXCD3M5NQQ')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7f89cd953550>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc452730eb8>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,6 +459,75 @@
     "print(\"Model prediction for 1st observation:\", reg_forest.predict(X_dia)[0])\n",
     "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factors, features=X_dia.iloc[0,:])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This could also be a way to rescale the smoothshap values, but while maintaining the revised feature importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rescale_factor = (reg_forest.predict(X_dia)[0]-explainer_reg.expected_value)/reg_smooth_shap_val[0,:].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model prediction for 1st observation: 183.3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id='iIV6VR63XBGJCQFBMV25M'>\n",
+       "<div style='color: #900; text-align: center;'>\n",
+       "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
+       "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
+       "  user you must also trust this notebook (File -> Trust notebook). If you are viewing\n",
+       "  this notebook on github the Javascript has been stripped for security. If you are using\n",
+       "  JupyterLab this error is because a JupyterLab extension has not yet been written.\n",
+       "</div></div>\n",
+       " <script>\n",
+       "   if (window.SHAP) SHAP.ReactDom.render(\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 151.63812217194572, \"outValue\": 183.3, \"link\": \"identity\", \"featureNames\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"], \"features\": {\"0\": {\"effect\": -7.6442744924134125, \"value\": 0.0380759064334241}, \"1\": {\"effect\": -14.215760257683764, \"value\": 0.0506801187398187}, \"2\": {\"effect\": 67.76240474276938, \"value\": 0.0616962065186885}, \"3\": {\"effect\": -3.0327242649895574, \"value\": 0.0218723549949558}, \"4\": {\"effect\": -3.2567353475774348, \"value\": -0.0442234984244464}, \"5\": {\"effect\": 5.458552270789105, \"value\": -0.0348207628376986}, \"6\": {\"effect\": 32.58000463619759, \"value\": -0.0434008456520269}, \"7\": {\"effect\": 2.615598924426136, \"value\": -0.00259226199818282}, \"8\": {\"effect\": -35.93180830346122, \"value\": 0.0199084208763183}, \"9\": {\"effect\": -12.673380080002541, \"value\": -0.0176461251598052}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('iIV6VR63XBGJCQFBMV25M')\n",
+       "  );\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7fc4526e1320>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Own Rescaled Smooth SHAP force plot\n",
+    "print(\"Model prediction for 1st observation:\", reg_forest.predict(X_dia)[0])\n",
+    "shap.force_plot(explainer_reg.expected_value, reg_smooth_shap_val[0,:]*rescale_factor, features=X_dia.iloc[0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
