Add own rescaling version of smooth shap

--- a/notebooks/SmoothSHAP.ipynb
+++ b/notebooks/SmoothSHAP.ipynb
@@ -206,7 +206,7 @@
    "id": "8cd4edb0",
    "metadata": {},
    "source": [
-    "### Compute smooth shap"
+    "## Comparison of raw SHAP, SHAP inbag, SHAP oob & Shrunk SHAP"
    ]
   },
   {
@@ -216,6 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compute smooth shap\n",
     "reg_smooth_shap_val, reg_smooth_shap_mean, lin_coefs, reg_lin_models, reg_shap_values_inbag, reg_shap_values_oob = smooth_shap(\n",
     "    reg_forest.inbag_SHAP_values, reg_forest.oob_SHAP_values, detailed_output=True\n",
     ")"
@@ -305,6 +306,13 @@
     "axs[3].set_title(\"Smooth SHAP\")\n",
     "axs[0].set_ylabel(\"Absolute SHAP values\")\n",
     "plt.setp(axs, ylim=axs[0].get_ylim());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Local interpretability of smooth SHAP values"
    ]
   },
   {
@@ -402,7 +410,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See Markus new paper for rescaling formula: "
+    "Rescaling formula from Markus new paper:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "image.png"
    ]
   },
   {
@@ -464,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This could also be a way to rescale the smoothshap values, but while maintaining the revised feature importance"
+    "This rescaling procedure as described by Markus undoes the smoothing, but it could also be a way to rescale the smoothshap values while maintaining the revised feature importance"
    ]
   },
   {
@@ -473,6 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (model_prediction - base value) / (sum(smooth_SHAP_values))\n",
     "rescale_factor = (reg_forest.predict(X_dia)[0]-explainer_reg.expected_value)/reg_smooth_shap_val[0,:].sum()"
    ]
   },
